# staty

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/staty/: CMakeLists.txt  FixerMain.cpp
src/staty/index/: SearchIdx.cpp  SearchIdx.h  StatIdx.cpp  StatIdx.h
src/staty/server/: StatServer.cpp  StatServer.h
web/: index.html  leaflet.js  script.js
